--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cloud_firestore: ^5.4.0
   lottie: ^3.1.3
   flutter_multi_formatter: ^2.0.0
+  responsive_framework: ^1.5.1
+
 
 
 
